--- a/andrea_clini/body/brainstorming.tex
+++ b/andrea_clini/body/brainstorming.tex
@@ -667,8 +667,6 @@ Finally we have
     &= 1 + \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big] + \Big[ h^{0 i} \dot{\pi}^i + \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big] +\tfrac18 \Big((h^{ii})^2 +2h^{ij} h^{ji}\Big) 
 \end{align}
 }
-The metric 
-
 
 The 4-velocity $u^\mu$ reads
 {\small
@@ -679,45 +677,45 @@ The 4-velocity $u^\mu$ reads
     &\tfrac{a^3}{6\lambda^3}\Bigg(1 + \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big] + \Big[ h^{0 i} \dot{\pi}^i + \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\Bigg)
     \\
     =&\frac{1}{6a}\big(1-\tfrac12 h^{\mu\nu}\eta_{\mu\nu}\big) \epsilon^{\mu \alpha \beta \gamma} \epsilon_{ijk} \, (\delta_\alpha^i + \partial_\alpha \pi^i) (\delta_\beta^j + \partial_\beta \pi^j) (\delta_\gamma^k + \partial_\gamma \pi^k)\\
-    &\Bigg(1 + \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big] + \Big[ h^{0 i} \dot{\pi}^i + \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\Bigg)
+    &\Bigg(1 + \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big] + \Big[ h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\Bigg)
 \end{align}
 }
 Therefore
 {\small
 \begin{align}
-    a \, u^\mu =&\underbrace{\frac{1}{6}\epsilon^{\mu\alpha\beta\gamma} \epsilon_{\alpha\beta\gamma}}_{=\delta_0^\mu} \big(1+\tfrac12 h^{00}-\tfrac12 h^{ii}\big)\bigg(1 \!+\! \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
+    a \, u^\mu =&\underbrace{\frac{1}{6}\epsilon^{\mu\alpha\beta\gamma} \epsilon_{\alpha\beta\gamma}}_{=\delta_0^\mu} \big(1+\tfrac12 h^{00}-\tfrac12 h^{ii}\big)\bigg(1 \!+\! \Big[ \tfrac12 h^{ii} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
     \\
-    &+\frac{1}{6}\left[1 + \tfrac12 h^{ii}-(\partial_\ell\pi^\ell)\right]
+    &+\frac{1}{6}\left[1 + \tfrac12 h^{00}-(\partial_\ell\pi^\ell)\right]
     \underbrace{\epsilon_{ijk} \,\left(\epsilon^{\mu\alpha j k}\partial_\alpha\pi^i+\epsilon^{\mu i \beta k}\partial_\beta\pi^j+\epsilon^{\mu i j \gamma}\partial_\gamma\pi^k\right)}_{=3\, \epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\alpha\pi^i \text{ by symmetry}}\\
     &+\frac{1}{6}\underbrace{\epsilon_{ijk} \,\left(\epsilon^{\mu i \beta\gamma}\partial_\beta\pi^j\,\partial_\gamma\pi^k + \epsilon^{\mu \alpha j \gamma}\,\partial_\alpha\pi^i\,\partial_\gamma\pi^k + \epsilon^{\mu \alpha \beta k}\,\partial_\alpha\pi^i\,\partial_\beta\pi^j\right)}_{=3\, \epsilon_{ijk}\, \epsilon^{\mu i \beta\gamma}\partial_\beta\pi^j\,\partial_\gamma\pi^k \text{ by symmetry}}
     + O(\pi^3, h^2)\\
-    =&\delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + \big(h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
+    =&\delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i -\tfrac12 h^{00} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
     \\
-    &+\frac{1}{2}\left[1 + \tfrac12 h^{ii}-(\partial_\ell\pi^\ell)\right]
+    &+\frac{1}{2}\left[1 + \tfrac12 h^{00}-(\partial_\ell\pi^\ell)\right]
      \epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\alpha\pi^i 
      +\frac{1}{2} \epsilon_{ijk}\, \epsilon^{\mu i \beta\gamma}\partial_\beta\pi^j\,\partial_\gamma\pi^k
     + O(\pi^3, h^2)\\
 \end{align}
 }
-
+%
 We can finally compute $y=u^\mu \partial_\mu \phi^0$
 {\small
 \begin{align}
     \frac{a}{\gamma}y =& \frac{a}{\gamma}u^\mu \partial_\mu \phi^0 = a u^\mu \big(\delta_\mu^0 + \partial_\mu \pi^0\big)\\
-    =& \big(\delta_\mu^0 + \partial_\mu \pi^0\big) \delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + \big(h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)\\
-    &+ \tfrac12 \big(\delta_\mu^0 + \partial_\mu \pi^0\big)\bigg(\left[1 + \tfrac12 h^{ii}-(\partial_\ell\pi^\ell)\right]
+    =& \big(\delta_\mu^0 + \partial_\mu \pi^0\big) \delta_0^\mu \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i - \tfrac12 h^{00} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)\\
+    &+ \tfrac12 \big(\delta_\mu^0 + \partial_\mu \pi^0\big)\bigg(\left[1 + \tfrac12 h^{00}-(\partial_\ell\pi^\ell)\right]
      \epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\alpha\pi^i 
      +\epsilon_{ijk}\, \epsilon^{\mu i \beta\gamma}\partial_\beta\pi^j\,\partial_\gamma\pi^k\bigg)
     \\
-    =& \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + \big(h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
+    =& \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + -\tfrac12 h^{00} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
     +\dot{\pi}^0 \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\bigg)\\
-    &+\tfrac12 \bigg(\left[1 + \tfrac12 h^{ii}-(\partial_\ell\pi^\ell)\right]
+    &+\tfrac12 \bigg(\left[1 + \tfrac12 h^{00}-(\partial_\ell\pi^\ell)\right]
      \underbrace{\epsilon_{i j k}\,\epsilon^{0 \alpha j k}\,\partial_\alpha\pi^i}_{=2(\partial_i\pi^i)} 
      +\underbrace{\epsilon_{ijk}\, \epsilon^{0 i \beta\gamma}\partial_\beta\pi^j\,\partial_\gamma\pi^k}_{=(\partial_j\pi^j)^2-(\partial_k\pi^j\,\partial_j\pi^k)}\bigg)
      +\tfrac12 \underbrace{\epsilon_{i j k}\,\epsilon^{\mu \alpha j k}\,\partial_\mu \pi^0\,\partial_\alpha\pi^i}_{=2\partial_o\pi^0(\partial_i\pi^i)-2\partial_i\pi^0\partial_0\pi^i}\\
-    =& \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i + \big(h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
+    =& \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\! +\! \Big[ h^{0 i} \dot{\pi}^i  -\tfrac12 h^{00} (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 +\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]\bigg)
     +\dot{\pi}^0 \bigg(1 \!+\! \Big[\tfrac12 h^{00} -(\partial_j \pi^j)\Big]\bigg)\\
-    &+(\partial_j\pi^j) +\tfrac12 h^{ii}(\partial_j\pi^j)-(\partial_j\pi^j)^2 +\tfrac12(\partial_j\pi^j)^2-\tfrac12(\partial_k\pi^j\,\partial_j\pi^k)
+    &+(\partial_j\pi^j) +\tfrac12 h^{00}(\partial_j\pi^j)-(\partial_j\pi^j)^2 +\tfrac12(\partial_j\pi^j)^2-\tfrac12(\partial_k\pi^j\,\partial_j\pi^k)
     +\dot{\pi}^0(\partial_j\pi^j)-\partial_j\pi^0\dot{\pi}^j
 \end{align}
 }
@@ -731,11 +729,11 @@ Then finally
 {\small
 \begin{align}
     \frac{a}{\gamma}y =& \bigg(1 \!+\! \Big[\tfrac12 h^{00}+ \dot{\pi}^0 \bluecancel{-(\partial_j \pi^j)}\Big]\\
-    &+\! \Big[\tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \big(h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j)\graycancel{-\dot{\pi}^0(\partial_j \pi^j)} + \tfrac12 (\dot{\pi}^i)^2 +\redcancel{ \tfrac12 (\partial_j \pi^j)^2} +\greencancel{\tfrac12 \partial_i\pi^j\partial_j\pi^i}\Big]\bigg)\\
-    &+\bluecancel{(\partial_j\pi^j)} +\tfrac12 h^{ii}(\partial_j\pi^j)\redcancel{-(\partial_j\pi^j)^2} +\redcancel{\tfrac12(\partial_j\pi^j)^2}\greencancel{-\tfrac12(\partial_k\pi^j\,\partial_j\pi^k)}
+    &+\! \Big[\tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i \purplecancel{-\tfrac12 h^{00}(\partial_j \pi^j)}\graycancel{-\dot{\pi}^0(\partial_j \pi^j)} + \tfrac12 (\dot{\pi}^i)^2 +\redcancel{ \tfrac12 (\partial_j \pi^j)^2} +\greencancel{\tfrac12 \partial_i\pi^j\partial_j\pi^i}\Big]\bigg)\\
+    &+\bluecancel{(\partial_j\pi^j)} \purplecancel{+\tfrac12 h^{00}(\partial_j\pi^j)}\redcancel{-(\partial_j\pi^j)^2} +\redcancel{\tfrac12(\partial_j\pi^j)^2}\greencancel{-\tfrac12(\partial_k\pi^j\,\partial_j\pi^k)}
     +\graycancel{\dot{\pi}^0(\partial_j\pi^j)}-\partial_j\pi^0\dot{\pi}^j\\
     =& \bigg(1 \!+\! \Big[\tfrac12 h^{00}+ \dot{\pi}^0\Big]
-    +\! \Big[\tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \big(\tfrac32 h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]\bigg).
+    +\! \Big[\tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i  + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]\bigg).
 \end{align}
 }
 
@@ -747,7 +745,7 @@ In conclusion we have the following expansions
     &\delta b^{(2)} = - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\,,
     \\[3pt]
     &y= \bar{y}(1+\delta y),\quad \bar{y}= \frac{\gamma}{a},\quad \delta y^{(1)} = \tfrac12 h^{00}+ \dot{\pi}^0,\\[3pt]
-    &\delta y^{(2)} = \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \big(\tfrac32 h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j.
+    &\delta y^{(2)} = \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j.
 \end{align}
 }
 
@@ -776,7 +774,7 @@ The quadratic action for fluid perturbations in a general curved background is t
         + (\bar{y}F_y) (h^{ii}-h^{00}) \Big[\tfrac12 h^{00}+ \dot{\pi}^0\Big]\\
     &\quad + (\bar{b}F_b) \Big[ - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \tfrac12 (\partial_j \pi^j)^2 -\tfrac12 \partial_i\pi^j\partial_j\pi^i\Big]
     \\
-    &\quad + (\bar{y}F_y) \Big[ \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \big(\tfrac32 h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]
+    &\quad + (\bar{y}F_y) \Big[ \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]
     \\
     &\quad + \tfrac12 (\bar{b}^2 F_{bb})\Big[ (\partial_j \pi^j) - \tfrac12 h^{ii}\Big]^2 
     + \tfrac12 (\bar{y}^2 F_{yy})\Big[\tfrac12 h^{00}+ \dot{\pi}^0\Big]^2
@@ -793,7 +791,7 @@ That is dropping second orders in metric perturbations and {\color{blue} integra
         + (\bar{y}F_y) (h^{ii}-h^{00}) \dot{\pi}^0 \\
     &\quad + (\bar{b}F_b) \Big[ - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \bluecancel{\tfrac12 (\partial_j \pi^j)^2} -\bluecancel{\tfrac12 \partial_i\pi^j\partial_j\pi^i}\Big]
     \\
-    &\quad + (\bar{y}F_y) \Big[ \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \big(\tfrac32 h^{ii}-\tfrac12 h^{00}\big) (\partial_j \pi^j) + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]
+    &\quad + (\bar{y}F_y) \Big[ \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]
     \\
     &\quad + \tfrac12 (\bar{b}^2 F_{bb})\Big[ (\partial_j \pi^j)^2 - h^{ii}(\partial_j \pi^j)\Big]
     + \tfrac12 (\bar{y}^2 F_{yy})\Big[h^{00} \dot{\pi}^0+ (\dot{\pi}^0)^2\Big]
@@ -801,24 +799,60 @@ That is dropping second orders in metric perturbations and {\color{blue} integra
         \bigg\}
 \end{align}
 }
-Finally collecting terms we have
+Collecting terms, the quadratic action read
 {\small
 \begin{align}
+\begin{aligned}
     S^{(2)}=
     &\int d^4x\,\,a^4\,\,\bigg\{
     \tfrac12 (yF_y-bF_b) (\dot{\pi}^i)^2-(yF_y) (\partial_j \pi^0\dot{\pi}^j)+\tfrac12 b^2 F_{bb} (\partial_j \pi^j)^2
     +\tfrac12 y^2 F_{yy} (\dot{\pi}^0)^2 + (b y F_{by}) (\dot{\pi}^0 \partial_j \pi^j)
     \bigg\}\\
     &\quad + a^4\,\,\bigg\{
-    \tfrac12\!\left(\bar{b}F_b + 3\bar{y}F_y - \bar{b}^2 F_{bb}\right) h^{ii}(\partial_j \pi^j)
-    + \tfrac12\!\left(-2\bar{b}F_b - \bar{y}F_y + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)
+    \tfrac12\!\left(\bar{b}F_b - \bar{b}^2 F_{bb}\right) h^{ii}(\partial_j \pi^j)
+    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)
     + \left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j\\
     &\qquad\qquad + \tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
     + \frac12\!\left(\bar{y}^2 F_{yy} - \bar{y}F_y\right) h^{00}\dot{\pi}^0
     \bigg\}
+\end{aligned}
 \end{align}
 }
+Note that only \emph{longitudinal} modes $\pi^j_L\propto\, \partial_j\pi^j$ results dynamical.
+
+Finally integrating by parts in both time and space the term $\partial_j \pi^0\dot{\pi}^j$ we get
+{\small
+\begin{align}
+\begin{aligned}
+    S^{(2)}=
+    &\int d^4x\,\,a^4\,\,\bigg\{
+    \tfrac12 (yF_y-bF_b) (\dot{\pi}^i)^2-(yF_y) (\partial_j \pi^j) \dot{\pi}^0 
+    - \Big[ 4\mathcal{H}(yF_y)+ \tfrac{d}{d\tau}(yF_y)\Big] (\partial_j \pi^j) \pi^{0}\\
+    &\qquad\qquad\qquad+\tfrac12 b^2 F_{bb} (\partial_j \pi^j)^2
+    +\tfrac12 y^2 F_{yy} (\dot{\pi}^0)^2 + (b y F_{by}) (\dot{\pi}^0 \partial_j \pi^j)
+    \bigg\}\\
+    &\quad + a^4\,\,\bigg\{
+    \tfrac12\!\left(\bar{b}F_b - \bar{b}^2 F_{bb}\right) h^{ii}(\partial_j \pi^j)
+    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)
+    + \left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j\\
+    &\qquad\qquad + \tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
+    + \frac12\!\left(\bar{y}^2 F_{yy} - \bar{y}F_y\right) h^{00}\dot{\pi}^0
+    \bigg\}
+\end{aligned}
+\end{align}
+}
+%
+Resolving the constraint for $\pi^0$ we now get
+{\small
+\begin{align}
+\begin{aligned}
+    ...
+\end{aligned}
+\end{align}
+}
+%
 We can now specialize this to specific choices of gauge...
+\bigskip
 
 
 
