--- a/andrea_clini/body/brainstorming.tex
+++ b/andrea_clini/body/brainstorming.tex
@@ -1576,3 +1576,23 @@ Therefore the comoving entropy is
     \sigma = \frac{F_y}{b} = a^3(1-3\Psi) y =  -a^2\bar{\varphi}'\left[1 + \left(\frac{\delta\varphi'}{\bar{\varphi}'}-\Phi-3\Psi\right) - \frac{1}{2}\frac{(\nabla\delta\varphi)^2}{(\bar{\varphi}')^2} \right] +\mathcal{O}(3,\mathrm{mix})\,.
 \end{align}
 
+
+
+%============================================================================
+\section{Matching to comoving curvature perturbations $\zeta$}
+%============================================================================
+
+
+With ou3 convention for the metric perturbations in Newtonian gauge
+\begin{equation}
+    g_{\mu\nu}=a^2\begin{pmatrix}
+        -(1+2\Phi) & 0 \\
+        0 & (1-2\Psi)\delta_{ij}
+    \end{pmatrix}\equiv a^2(\eta_{\mu\nu}+h_{\mu\nu}) \Rightarrow \quad h^{00}=h_{00}=-2\Phi,\quad h^{ii}=h_{ii}=-6\Psi\,.
+\end{equation}
+
+The curvature perturbation on comoving slices $\zeta$ is defined as
+\begin{equation}
+    \zeta = ...
+\end{equation}
+We can thus express $\zeta$ in terms of the fields $\pi_L$ and the metric perturbations...
