--- a/main.tex
+++ b/main.tex
@@ -737,6 +737,8 @@ we identify the \textbf{non-adiabatic pressure perturbations} of the k-essence f
 
 \include{quadratic_action_curved_spacetime}
 
+\include{curvature_perturbations}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
