--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -124,7 +124,7 @@ Collecting terms, the quadratic action read
 }
 Note that only \emph{longitudinal} modes $\pi^j_L\propto\, \partial_j\pi^j$ results dynamical.
 
-Finally integrating by parts in both time and space the term $\partial_j \pi^0\dot{\pi}^j$ we get
+Finally integrating by parts in both time and space the term $\partial_j \pi^0\dot{\pi}^j$ we get\todoAC{Collect $\rho+p$ \& rewrite}
 {\small
 \begin{align}
 \begin{aligned}
