--- a/main.tex
+++ b/main.tex
@@ -735,6 +735,26 @@ we identify the \textbf{non-adiabatic pressure perturbations} of the k-essence f
 \end{aligned}
 \end{align}
 
+
+%----------------------------------------------------------------
+\subsection{Matching to k-essence remastered}
+%----------------------------------------------------------------
+{\color{red} 
+The matching should be adjusted so as to preserve shift symmetry of $\phi^0$, thus forbidding the dentification of $\varphi$ with $\phi^0$ directly since $V(\varphi)$ would otherwise break it.
+In turn, the identification $y=\sqrt{X}$ need some rethinking.
+
+In the 5-essence case we can express the potential in terms of the fluid variables as
+\begin{align}
+    \rho=\tfrac12 X +V, \quad p =\tfrac12 X -V\quad \Rightarrow\quad V(\varphi) = \tfrac12(\rho - p) \equiv -F +\tfrac12 (yF_y+ bF_b)\,.
+\end{align}
+Thermodyncamically this identifies the potential with the legendre transform of the free energy density $\mathfrak{a}$ with respect to both $T$ and $n$.
+We also recover $X$ as 
+\begin{align}
+    X=\rho+p = yF_y + bF_b\,.
+\end{align}
+We should now invert this to identify $y$ and $b$...
+}
+
 \include{quadratic_action_curved_spacetime}
 
 \include{curvature_perturbations}
