--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -26,6 +26,7 @@ and the temperature $T\equiv y$ for
 \end{align}
 
 We now expand up to quadratic order in the fields $\pi$ and mixed order in $\pi h$, ignoring pure second orders in the metric $h^2$.
+The latter would indeed give a contribution $\propto \, \sqrt{|g|}\, F(\bar{b}, \bar{y}) h^2$ that could be reabsorbed in a redefinition of the cosmological constant.
 We have the expansions
 {
 \begin{align}\label{eq:expansions_b_y}
