--- a/main.tex
+++ b/main.tex
@@ -201,7 +201,7 @@ Via Celoria 16, 20133 Milan, Italy}
 \date{\today} 
 
 
-\abstract{Long-lasting accelerated expansion cannot be support by perfect barotropic fluid where pressure fluctuations are fully determined by the energy density ones. The manifestation of this obstruction is that the adiabatic sound speed is fully determined by the equation of state so that requiring a negative equation of state to enforce acceleration unavoidably lead to gradient instabilities. We show that non-barotropic perfect fluids allow for accelerated expansion by decoupling the speed of sound from the equation of state similarly to what happens in generalize quintessence models. We show that non-barotropic perfect fluids are more general than generalized quintessence because they allow for genuinely independent entropy fluctuations. We show that the presence of the latter realizes the most general pressure perturbation of a perfect fluid. However exactly like for generalized quintessence fluid stability requires: $w>-1$ and $0<c_s^2<1$. The latter seems intimately connected with the absence of dissipation at least at leading order in the derivative expansion.}
+\abstract{Long-lasting accelerated expansion cannot be supported by perfect barotropic fluid where pressure fluctuations are fully determined by the energy density ones. The manifestation of this obstruction is that the adiabatic sound speed is fully determined by the equation of state so that requiring a negative equation of state to enforce acceleration unavoidably lead to gradient instabilities. We show that non-barotropic perfect fluids allow for accelerated expansion by decoupling the speed of sound from the equation of state similarly to what happens in generalized quintessence models. fluid stability requires: $w>-1$ and $0<c_s^2<1$. The former seems intimately connected with the absence of dissipation at least at leading order in the derivative expansion. Non-barotropic perfect fluids are somewhat non-generic from the ultraviolet perspective }
 
 \maketitle
 
