--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -213,6 +213,6 @@ Indeed $\mathcal{M}^2$ is a true square and, recalling $y\equiv T$, we have
     \end{cases} 
 \end{equation}
 Finally we immediately check the speed of sound $c_s^2$, defined as the coefficient of the fluctuations above, always matches the thermodynamical definition of \emph{adiabatic sound speed}
-\begin{align}
+\begin{align}\label{eq:cs_equiv_cb_flat_spacetime}
     c_b^2:= \frac{\partial p}{\partial \rho}_{\mid \sigma} \overset{\text{proved before}}{=}\frac{-b^2F_{bb} F_{yy}+(F_y-bF_{yb})^2}{F_{yy}\,(yF_y-bF_b)} \overset{\text{easy check}}{\equiv} c_s^2.
 \end{align}
