--- a/quadratic_action_curved_spacetime.tex
+++ b/quadratic_action_curved_spacetime.tex
@@ -14,15 +14,15 @@ The fluids variables are written for simplicity with a rescaling factor $\gamma$
 \begin{align}
     \phi^0=\gamma\Big(\tau+\pi^0\Big), \quad \phi^i=\lambda\Big(x^i+\pi^i\Big)\,.
 \end{align}
-The invariants are again the number density $n\equiv b$ for
+The invariants are again the number density $n\equiv b$ defined by
 \begin{align}
     b=\sqrt{\det B}\quad \text{for}\quad
     B^{ij}= g^{\mu\nu} \partial_\mu \phi^i \partial_\nu \phi^j,
 \end{align}
-and the temperature $T\equiv y$ for
+and the temperature $T\equiv y$ defined by
 \begin{align}
     y= u^\mu \partial_\mu \phi^0
-    \quad\text{for}\quad u^\mu=& \frac{1}{\sqrt{-g}\, 6b} \epsilon^{\mu \alpha \beta \gamma} \epsilon_{ijk} \, \partial_\alpha \phi^i \partial_\beta \phi^j \partial_\gamma \phi^k \propto\,  \star(d\phi^1\wedge d\phi^2\wedge d \phi^3).
+    \quad\text{for}\quad u^\mu=& \frac{1}{\sqrt{-g}\, 3!\,b} \epsilon^{\mu \alpha \beta \gamma} \epsilon_{ijk} \, \partial_\alpha \phi^i \partial_\beta \phi^j \partial_\gamma \phi^k \propto\,  \star(d\phi^1\wedge d\phi^2\wedge d \phi^3).
 \end{align}
 
 We now expand up to quadratic order in the fields $\pi$ and mixed order in $\pi h$, ignoring pure second orders in the metric $h^2$.
@@ -90,7 +90,7 @@ Dropping  further second orders in metric perturbations and {\color{blue} integr
 \begin{align}
 \begin{aligned}
     S^{(2)}=
-    &\int d^4x\,\, a^4 \bigg\{
+    \int d^4x\,\, a^4 \bigg\{&
         (\bar{b}F_b) (h^{ii}-h^{00}) (\partial_j \pi^j)
         + (\bar{y}F_y) (h^{ii}-h^{00}) \dot{\pi}^0 \\
     &\quad + (\bar{b}F_b) \Big[ - h^{0 i} \dot{\pi}^i - \tfrac12  h^{ii} (\partial_j \pi^j) - \tfrac12 (\dot{\pi}^i)^2 + \bluecancel{\tfrac12 (\partial_j \pi^j)^2} -\bluecancel{\tfrac12 \partial_i\pi^j\partial_j\pi^i}\Big]
@@ -98,27 +98,27 @@ Dropping  further second orders in metric perturbations and {\color{blue} integr
     &\quad + (\bar{y}F_y) \Big[ \tfrac12 h^{00}\dot{\pi}^0+ h^{0 i} \dot{\pi}^i + \tfrac12 (\dot{\pi}^i)^2 -\partial_j\pi^0\dot{\pi}^j\Big]
     \\
     &\quad + \tfrac12 (\bar{b}^2 F_{bb})\Big[ (\partial_j \pi^j)^2 - h^{ii}(\partial_j \pi^j)\Big]
-    + \tfrac12 (\bar{y}^2 F_{yy})\Big[h^{00} \dot{\pi}^0+ (\dot{\pi}^0)^2\Big]
-    + (\bar{b}\bar{y} F_{by}) \Big[ \dot{\pi}^0(\partial_j \pi^j) - \tfrac12 h^{ii}\dot{\pi}^0 + \tfrac12 h^{00} (\partial_j\pi^j)\Big]
+    + \tfrac12 (\bar{y}^2 F_{yy})\Big[h^{00} \dot{\pi}^0+ (\dot{\pi}^0)^2\Big]\\
+    &\quad+ (\bar{b}\bar{y} F_{by}) \Big[ \dot{\pi}^0(\partial_j \pi^j) - \tfrac12 h^{ii}\dot{\pi}^0 + \tfrac12 h^{00} (\partial_j\pi^j)\Big]
         \bigg\}
 \end{aligned}
 \end{align}
 }
-Collecting terms, the quadratic action read
+Collecting terms, the final expression for the quadratic action is
 {\small
-\begin{align}
+\begin{align}\label{eq:final_quadratic_action_curved_spacetime}
 \begin{aligned}
     S^{(2)}=
     &\int d^4x\,\,a^4\,\,\bigg\{
     \tfrac12 (yF_y-bF_b) (\dot{\pi}^i)^2+\tfrac12 b^2 F_{bb} (\partial_j \pi^j)^2
-    +\tfrac12 y^2 F_{yy} (\dot{\pi}^0)^2 + (b y F_{by}) (\dot{\pi}^0 \partial_j \pi^j)-(yF_y) (\partial_j \pi^0\dot{\pi}^j)
+    +\tfrac12 y^2 F_{yy} (\dot{\pi}^0)^2 \\
+    &\qquad\qquad\qquad+ (b y F_{by}) (\dot{\pi}^0 \partial_j \pi^j)-(yF_y) (\partial_j \pi^0\dot{\pi}^j)
     \bigg\}\\
     &\quad + a^4\,\,\bigg\{
     \tfrac12\!\left(\bar{b}F_b - \bar{b}^2 F_{bb}\right) h^{ii}(\partial_j \pi^j)
-    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)
-    + \left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j\\
-    &\qquad\qquad + \tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
-    + \frac12\!\left(\bar{y}^2 F_{yy} - \bar{y}F_y\right) h^{00}\dot{\pi}^0
+    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)\\
+    &\qquad\qquad+ \left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j + \tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
+    + \tfrac12\!\left(\bar{y}^2 F_{yy} - \bar{y}F_y\right) h^{00}\dot{\pi}^0
     \bigg\}
 \end{aligned}
 \end{align}
@@ -137,9 +137,8 @@ Finally integrating by parts in both time and space the term $\partial_j \pi^0\d
     \bigg\}\\
     &\quad + a^4\,\,\bigg\{
     \tfrac12\!\left(\bar{b}F_b - \bar{b}^2 F_{bb}\right) h^{ii}(\partial_j \pi^j)
-    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)
-    + \left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j\\
-    &\qquad\qquad + \tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
+    + \tfrac12\!\left(-2\bar{b}F_b + \bar{b}\bar{y}F_{by}\right) h^{00}(\partial_j \pi^j)\\
+    &\qquad\qquad+\left(\bar{y}F_y - \bar{b}F_b\right) h^{0 i}\,\dot{\pi}^j +\tfrac12\!\left(2\bar{y}F_y - \bar{b}\bar{y}F_{by}\right) h^{ii}\dot{\pi}^0
     + \frac12\!\left(\bar{y}^2 F_{yy} - \bar{y}F_y\right) h^{00}\dot{\pi}^0
     \bigg\}
 \end{aligned}
@@ -158,34 +157,30 @@ Resolving the constraint for $\pi^0$ we now get\todotag{Do it}
 We can now specialize this to specific choices of gauge...
 \bigskip
 
-\noindent
-\textbf{Flat spacetime}\\
-As a consistency check, in flat spacetime $a=1$ and $h_{\mu\nu}=0$, we can thus integrate by parts in both space and time the term $\partial_j \pi^0\dot{\pi}^j = -\dot{\pi}^0(\partial_j \pi^j)$ without Hubble friction, and we recover
+
+%-----------------------------------------------------------------
+\subsection{Quadratic action in flat spacetime}
+%-------------------------------------------------------
+In flat spacetime $a=1$ and $h_{\mu\nu}=0$, only the first terms in the quadratic action \eqref{eq:final_quadratic_action_curved_spacetime} survive, and we can integrate by parts in both space and time the term $\partial_j \pi^0\dot{\pi}^j = -\dot{\pi}^0(\partial_j \pi^j)$ to get
 {\small
 \begin{align}
 \begin{aligned}
-    S^{(2)}=
-    &\int d^4x\,\,\bigg\{
-    \tfrac12 (yF_y-bF_b) (\dot{\pi}^i)^2-(yF_y) (\partial_j \pi^0\dot{\pi}^j)+\tfrac12 b^2 F_{bb} (\partial_j \pi^j)^2
-    +\tfrac12 y^2 F_{yy} (\dot{\pi}^0)^2 + (b y F_{by}) (\dot{\pi}^0 \partial_j \pi^j)
-    \bigg\}\\
-    &= \int d^4x \frac{yF_y-bF_b}{2}\bigg\{(\dot{\pi}^i)^2 - (\partial_j\pi^j)^2\Big[-\frac{b^2F_{bb}}{(yF_y-bF_b)}\Big]
-    + (\dot{\pi}^0)^2 \frac{y^2F_{yy}}{(yF_y-bF_b)}
+    S^{(2)}&= \int d^4x \frac{(yF_y-bF_b)}{2}\bigg\{(\dot{\pi}^i)^2 - (\partial_j\pi^j)^2\Big[-\frac{b^2F_{bb}}{(yF_y-bF_b)}\Big]\\
+    &\qquad\qquad\qquad\qquad\qquad+(\dot{\pi}^0)^2 \frac{y^2F_{yy}}{(yF_y-bF_b)}
     - 2\dot{\pi}^0 (\partial_j \pi^j) \frac{(yF_y-byF_{by})}{(yF_y-bF_b)}
     \bigg\}\\
-    &= \int d^4x \frac{(\rho+p)}{2}\bigg\{(\dot{\pi}^i)^2 - \mathcal{C} (\partial_j\pi^j)^2 
+    &=\int d^4x \frac{(\rho+p)}{2}\bigg\{(\dot{\pi}^i)^2 - \mathcal{C} (\partial_j\pi^j)^2 
     + (\dot{\pi}^0)^2 \mathcal{A}
     - 2\mathcal{M}\dot{\pi}^0 (\partial_j \pi^j) 
     \bigg\}
 \end{aligned}
 \end{align}
 }
-for 
+for $\rho= -F + y F_y$, $p= F - b F_b$ and 
 {\small
 \begin{align}
 \begin{aligned}
-    \rho= -F + y F_y, \quad p= F - b F_b,
-    \quad \mathcal{C} = -\frac{b^2F_{bb}}{(yF_y-bF_b)},\quad 
+    &\mathcal{C} = -\frac{b^2F_{bb}}{(yF_y-bF_b)},\quad 
     \mathcal{A} = \frac{y^2F_{yy}}{(yF_y-bF_b)} = \frac{T\, \frac{\partial\rho }{\partial T}}{\rho+p},\quad
     \mathcal{M} = \frac{(yF_y-byF_{by})}{(yF_y-bF_b)}.
 \end{aligned}
@@ -195,7 +190,7 @@ The entropy field $\pi^0$ is thus non-dynamical and the constraint equations giv
 \begin{align}
     \dot{\pi}^0 = \frac{\mathcal{M}}{\mathcal{A}} (\partial_j \pi^j) + \text{const.}
 \end{align}
-The constant is not physically relevant and is reabsorbed in the original definition of $\phi^0=\gamma(t+\pi^0)$.
+The constant is not physical and is reabsorbed in the original definition of $\phi^0=\gamma(t+\pi^0)$.
 Solving the constraint the action for the coordinate $\pi^i$ becomes
 {\small
 \begin{align}
